--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,57 +1,24 @@
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-    <title>Login page</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-    <style>
-        .login-form {
-            width: 340px;
-            margin: 50px auto;
-            font-size: 15px;
-        }
-        .login-form h2 {
-            margin: 0 0 15px;
-            font-weight: bold;
-        }
-        .form-control, .btn {
-            min-height: 38px;
-            border-radius: 2px;
-        }
-        .btn {
-            font-size: 15px;
-            font-weight: bold;
-        }
-    </style>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" rel="stylesheet" crossorigin="anonymous"/>
+  <title>Login page</title>
 </head>
 <body>
-<div class="login-form">
-<div th:if="${param.error}">
-    Invalid username and password.
-    <p th:text="${param.error}">VALUE</p>
-</div>
-<div class="error" th:if="${param.error}"
-     th:with="errorMsg=${session['SPRING_SECURITY_LAST_EXCEPTION'].message}">
-    Reason: <span th:text="${errorMsg}">Wrong input!</span>
-</div>
-<div th:if="${param.logout}">
-    You have been logged out.
-</div>
-<form method="POST" action="/login">
-    <h2 class="text-center">Please sign in</h2>
-    <div class="form-group">
-        <input type="text" class="form-control" placeholder="Username" required="required" name="j_username">
-    </div>
-    <div class="form-group">
-        <input type="password" class="form-control" placeholder="Password" required="required" name="j_password">
-    </div>
-    <div class="form-group">
-        <button type="submit" class="btn btn-primary btn-block">Sign in</button>
-    </div>
-</form>
+<div class="container">
+  <form class="form-signin" action="/login" method="post">
+    <h2 class="form-signin-heading">Please sign in</h2>
+    <p>
+      <input type="text" id="username" name="username" class="form-control" placeholder="UserName" required autofocus>
+    </p>
+    <p>
+      <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
+    </p>
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+  </form>
 </div>
 </body>
 </html>
